- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.5.0
- 
    None
- 
    OS X 10.10.2 (14C109)
 qtbase dev (d4789294a41d13e4e43cdfb4d25129c72c2fccab), but probably affects 5.5 and 5.4 (and 5.3).
- 
        76c94be4e77bfef6ee3642cb175ff34ba6c694db
VoiceOver cannot check checkboxes or radio buttons on OS X.
Steps to reproduce:
1. Launch examples/widgets/widgets/groupbox/groupbox.app
2. Launch VoiceOver (Cmd-F5)
(radio buttons: )
3. Move VoiceOver cursor to the "Exclusive radio buttons" group (VO-left/right)
4. Interact with the group (VO-Shift-down)
5. Move VoiceOver cursor to the "Radio button 2" radio button (VO-right), verifying it is not set (and only "Radio button 1" is set out of the 3)
6. Select the radio button (VO-Space)
(check boxes: )
7. Stop interacting with the "Exclusive radio buttons" group (VO-Shift-up)
8. Move VoiceOver cursor to the "Non-Exclusive Checkboxes" group (VO-left/right)
9. Interact with the group (VO-Shift-down)
10. Move VoiceOver cursor to the "Checkbox 1" radio button (VO-right), verifying it is unchecked
11. Press the "Checkbox 1" checkbox (VO-Space)
Expected Behavior:
After step 6.: "Radio button 2" becomes set and "Radio button 1" becomes unset, all other window elements remain unchanged
After step 11.: "Checkbox 1" becomes checked, all other window elements remain unchanged
Actual Behavior:
After step 6.: no change at all
After step 11.: no change at all
Workaround:
Click the checkbox/radio button using mouse, that is:
1. Move mouse to VoiceOver cursor (VO-Cmd-F5)
2. Click mouse (VO-Shift-Space)
| For Gerrit Dashboard: QTBUG-44852 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 108035,6 | OS X Accessibility: Make checkboxes etc. checkable with VoiceOver | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 108818,4 | OS X Accessibility: Make checkboxes etc. checkable with VoiceOver | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |