src/plugins/platforms/cocoa/qcocoaaccessibility.h
@@ -136,6 +136,10 @@ parameter_list|(
 name|NSString
 modifier|*
 name|nsAction
+parameter_list|,
+name|QAccessibleInterface
+modifier|*
+name|interface
 parameter_list|)
 function_decl|;
 name|bool
